fix: adjusted the placement of the user-stat - remove email column on mobile

--- a/lendsqr-fe-test/src/styles/user.scss
+++ b/lendsqr-fe-test/src/styles/user.scss
@@ -121,6 +121,11 @@
       gap: 0.5rem;
       min-height: 3rem;
       justify-content: space-between;
+      align-items: center;
+
+      @media (min-width: 769px) {
+        text-align: center;
+      }
 
       &:before {
         content: attr(data-label);
@@ -255,7 +260,15 @@
   border-radius: 8px;
   padding: 1rem;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.04);
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 
+  @media (min-width: 768px) {
+    flex-direction: column;
+    gap: 0;
+    align-items: start;
+  }
   &__icon {
     width: 40px;
     height: 40px;
@@ -307,6 +320,11 @@
     font-weight: 600;
     margin: 0;
   }
+
+  &__text {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .status {
@@ -322,6 +340,7 @@
     margin-left: 0;
     padding: 0.375rem 0.75rem;
     font-size: 0.75rem;
+    text-align: center;
   }
 
   &--active {
@@ -504,7 +523,7 @@
     border: none;
     background: none;
     width: 100%;
-    text-align: left;
+    text-align: center;
     cursor: pointer;
     color: #545f7d;
     font-size: 14px;
@@ -535,5 +554,11 @@
 
   .td-content {
     margin-left: auto !important;
+  }
+}
+.only__desktop {
+  display: none !important;
+  @media (min-width: 769px) {
+    display: block !important;
   }
 }
